eww: tweak bar theming

--- a/global/dot-config/eww/bar/css/_colors.scss
+++ b/global/dot-config/eww/bar/css/_colors.scss
@@ -30,6 +30,7 @@ $crust: #11111b;
 
 $fg: $text;
 $bg: rgba(30, 30, 46, 0.6);
+$windowbg: rgba(30, 30, 46, 0.9);
 $bg1: rgba(49, 50, 68, 0.6);
 $border: #28283d;
 $shadow: $crust;
