--- a/global/dot-config/eww/bar/css/_sidebar.scss
+++ b/global/dot-config/eww/bar/css/_sidebar.scss
@@ -90,7 +90,7 @@
   @include rounding;
   background-color: $bg1;
   margin: 0.5rem 1rem;
-  padding: 0.6rem 1rem;
+  padding: 0.6rem 2rem 0.6rem 1rem;
 
   scale {
     margin-right: -1rem;
