--- a/global/dot-config/eww/bar/eww.scss
+++ b/global/dot-config/eww/bar/eww.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin window {
-  background-color: $bg;
+  background-color: $windowbg;
   background-position: center;
   background-size: cover;
   border: 1px solid rgba(0, 0, 0, 0.3);
