--- a/global/dot-config/eww/bar/css/_music.scss
+++ b/global/dot-config/eww/bar/css/_music.scss
@@ -42,24 +42,17 @@
 }
 
 .music-button-box {
-  margin: 0.5rem 0 0;
+  // margin: 0.5rem 0 0;
+  margin-right: 1rem;
 }
 
-.music-button label {
-  color: $subtext1;
-  font-size: 2rem;
-  margin-left: 0.5rem;
-}
-
-.song-button {
-  margin-left: 0.5rem;
-}
-.song-button:hover {
-  color: $overlay1;
-}
-
-.music-button:hover label {
+.music-button {
   color: $fg;
+  font-size: 2em;
+  margin-left: 0.5rem;
+}
+.music-button:hover {
+  color: $subtext1;
 }
 
 .music-time {
@@ -80,4 +73,12 @@
     min-height: 10px;
     min-width: 170px;
   }
+}
+
+.song-button {
+  font-size: 1.5em;
+  margin-left: 0.5rem;
+}
+.song-button:hover {
+  color: $subtext1;
 }
