--- a/global/dot-config/eww/bar/css/_volume.scss
+++ b/global/dot-config/eww/bar/css/_volume.scss
@@ -3,6 +3,8 @@
   color: $green;
   font-size: 1.2rem;
   margin-right: -0.5rem;
+  margin-left: -0.3rem;
+  padding-right: 0.1rem;
 }
 .volbar highlight {
   background-image: linear-gradient(to right, $teal, $sky);
