--- a/global/dot-config/eww/bar/css/_sidebar.scss
+++ b/global/dot-config/eww/bar/css/_sidebar.scss
@@ -148,7 +148,7 @@
     background-color: $bg1;
     border-radius: 50%;
     margin-bottom: 0.1rem;
-    padding: 0.5rem;
+    padding: 0.3rem 0.9rem;
 
     label {
       font-size: 1.5rem;
@@ -180,3 +180,4 @@
     background-color: $green;
     color: $crust;
 }
+
