--- a/global/dot-config/eww/bar/eww.scss
+++ b/global/dot-config/eww/bar/eww.scss
@@ -104,12 +104,12 @@ scale trough {
 }
 
 /* workspaces */
-.focused {
-  background-color: $bg;
-  border-radius: 1rem;
-  margin: 0.3rem;
-  padding: 0.25rem;
-}
+// .focused {
+//   background-color: $bg;
+//   border-radius: 1rem;
+//   margin: 0.3rem;
+//   padding: 0.25rem;
+// }
 
 .workspaces {
   margin-left: 10px;
@@ -118,4 +118,5 @@ scale trough {
 .ws {
   border-radius: 2rem;
   margin: 0.7rem 0.3rem;
+  padding: 0.45rem;
 }
