bar: fix volume icon

--- a/global/dot-config/eww/bar/eww.scss
+++ b/global/dot-config/eww/bar/eww.scss
@@ -59,7 +59,7 @@ tooltip {
 .icon,
 .icon label {
   // font-family: NotoSans Nerd Font Propo;
-  font-family: Material Icons;
+  // font-family: Material Icons;
   // font-family: Material Symbols Outlined;
 }
 
