--- a/global/dot-config/eww/bar/css/_sidebar.scss
+++ b/global/dot-config/eww/bar/css/_sidebar.scss
@@ -57,6 +57,9 @@
       background-color: rgba(255, 255, 255, 0.1);
     }
   }
+    button:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
 }
 
 /* volume & brightness sliders */
@@ -129,6 +132,24 @@
       background-color: $bg1;
     }
   }
+}
+
+
+.net-box {
+    button {
+        // padding-left: 1.2rem;
+        padding: 0.8rem;
+    }
+}
+
+.bluetooth-box {
+    button {
+        padding: 0.85rem 1.3rem;
+    }
+}
+
+.cloud-box button {
+    padding: 0.7rem 1.2rem 0.9rem 0.7rem;
 }
 
 .bt-connected {
