eww: fix styles

--- a/global/dot-config/eww/eww.scss
+++ b/global/dot-config/eww/eww.scss
@@ -16,7 +16,8 @@
 
 * {
   all: unset;
-  font-family: JetBrainsMono Nerd Font Propo, sans-serif;
+  // font-family: JetBrainsMono Nerd Font Propo, sans-serif;
+  font-family: FantasqueSansM Nerd Font Propo, sans-serif;
   font-feature-settings: "zero";
   transition: 200ms ease;
 }
