--- a/shared/.config/eww/css/_volume.scss
+++ b/shared/.config/eww/css/_volume.scss
@@ -1,10 +1,10 @@
 /* bar volume module */
 .vol-icon {
   color: $green;
-  font-size: 1.2rem;
-  margin-right: -0.5rem;
-  margin-left: -0.3rem;
-  padding-right: 0.1rem;
+  /* font-size: 1.2rem; */
+  /* margin-right: -0.5rem; */
+  /* margin-left: -0.3rem; */
+  /* padding-right: 0.1rem; */
 }
 .volbar highlight {
   background-image: linear-gradient(to right, $teal, $sky);
