eww: add date to main bar

--- a/shared/.config/eww/css/_colors.scss
+++ b/shared/.config/eww/css/_colors.scss
@@ -11,6 +11,7 @@ $teal: #94e2d5;
 $sky: #89dceb;
 $sapphire: #74c7ec;
 $blue: #89b4fa;
+$lightblue: #C4DAFD;
 $lavender: #b4befe;
 
 $text: #cdd6f4;
