--- a/shared/.config/eww/eww.scss
+++ b/shared/.config/eww/eww.scss
@@ -70,23 +70,26 @@ tooltip {
 
 /* date & time */
 .clock {
-  padding-left: 0.7rem;
+  padding-left: 1rem;
   padding-right: 0.5rem;
+  padding-top: 0.2rem;
+}
+
+.date {
+  /* font-size: 0.8em; */
+  font-weight: bold;
+  color: $lavender;
 }
 
 .hour {
   font-weight: bold;
   padding-left: 5px;
+  color: $lightblue;
 }
 
 .minute {
   padding-right: 0.7rem;
-}
-
-.date {
-  font-size: 0.8em;
-  font-weight: bold;
-  color: $flamingo;
+  color: $lightblue;
 }
 
 /* right-aligned modules */
